add inline elements on baby-homepage

--- a/baby-homepage.html
+++ b/baby-homepage.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <h1>My babies website</h1>
-  <h2>These are my babies favorite things.</h2>
+  <h2>These are my babies <strong>favorite things</strong>.</h2>
 
-  <h3>Activities</h3>
+  <h3><em>Activities</em></h3>
   <p>Here are some of their favorite activities</p>
   <ul>
     <li>Outdoor:
